added blood particle effect on death(press space)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <html>
 	<title> Shift </title>
-	<canvas id="mycanvas" width="500px" height="500px"> Your browser doesnot support Canvas</canvas>
+	    <style>
+      body,html {
+        margin:1;
+        padding:1;
+      }
+    </style>
+	<canvas id="mycanvas" width="400px" height="400px"> Your browser doesnot support Canvas</canvas>
 	<body>
+
 		<script type="text/javascript" src="shift1.js"></script>
 	</body>
 </html>
