canvas rotation and map parser by vasuman

--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <html>
 	<title> Shift </title>
-	    <style>
-      body,html {
-        margin:1;
-        padding:1;
-      }
-    </style>
+	<link rel='stylesheet' href='shift.css' />
+    <div id="sekhar" class="box">
 	<canvas id="mycanvas" width="400px" height="400px"> Your browser doesnot support Canvas</canvas>
+	</div>
 	<body>
 
 		<script type="text/javascript" src="shift1.js"></script>
+		<script type="text/javascript" src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js'></script>
 	</body>
 </html>
