--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<body>
 
 		<script type="text/javascript" src="shift1.js"></script>
-		<script type="text/javascript" src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js'></script>
+		<script type="text/javascript" src="jquery.js"></script>
+
 	</body>
 </html>
